--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -56,6 +56,7 @@ h1 {
     align-items: center;
     text-align:center;
     margin: 2rem;
+    padding: 0.4rem;
     width: 70%;
     line-height: 1.5rem;
     border: 1px darkslateblue dotted;
